k3s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapplication
  labels:
    author: ino-bh
  annotations:
    why: to group my app and its services under this namespace
