k3s/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-app
  namespace: app
  annotations:
    desc: go-api service which handles all the requests.
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
        labels:
          app: todo
        annotations:
          desc: webserver
    spec:
      containers: 
      - name: pod-app-todo
        image: ghcr.io/benedicthomuth/bachelor-thesis/server:latest
        imagePullPolicy: Always
        ports:
        - name: server-port
          containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "300m"
            memory: "300Mi"
      imagePullSecrets:
      - name: github-cr

---

apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: app
spec:
  selector:
    app: todo
  ports:
  - name: server-port
    port: 80
    targetPort: server-port

---

### Database ###
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deployment-database
  namespace: app
  annotations:
    desc: persistent storage for app data.
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
        labels:
          app: database
        annotations:
          desc: webserver
    spec:
      containers: 
      - name: pod-database
        image: ghcr.io/benedicthomuth/bachelor-thesis/database:latest
        # image: postgres
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            cpu: "300m"
            memory: "300Mi"
          limits:
            cpu: "900m"
            memory: "700Mi"
        volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: postgresdb
      imagePullSecrets:
        - name: github-cr
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: ebs-pg-app-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app
spec:
  selector:
    app: database
  ports:
  - name: http
    port: 5432
    targetPort: postgres
