k3s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-service
  namespace: app
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    services:
    - name: service-app
      port: 80
    middlewares:
      - name: strip-api-prefix
---
# Strip the api prefix so the service behind the ingress sees .../... instead of .../api/....
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: app
spec:
  stripPrefix:
    prefixes:
    - /api
